# voice-scaffold

./: .gitignore  APPOINTMENT_VOICE_README.md  README.md  appointment_voice.py  cli.py  pyproject.toml  run_appointment_voice.sh  voice.py
appointment-scheduler/: .env.example  LOGGING_DOCUMENTATION.md  README.md  STREAMLIT_README.md  VOICE_README.md  demo_streamlit.py  example_usage.py  requirements.txt  run_local.sh  run_streamlit.sh  run_voice.sh  streamlit_app.py  voice_chat.py
appointment-scheduler/.streamlit/: config.toml
appointment-scheduler/backend/: config.py  main.py
appointment-scheduler/backend/api/: appointments.py  conversation.py
appointment-scheduler/backend/database/: ARCHITECTURE.md  MIGRATION_SUMMARY.md  QUICKSTART.md  README.md  __init__.py  providers.csv  providers.py  schedules.csv  schedules.py  test_csv_db.py  test_integration.py  test_manual.py
appointment-scheduler/backend/llm/: client.py  conversation_manager.py  provider_matcher.py  tools.py
appointment-scheduler/backend/models/: constants.py  schemas.py
appointment-scheduler/backend/services/: appointment_service.py  schedule_service.py
appointment-scheduler/tests/: test_api_endpoints.py  test_appointment_service.py  test_conversation_manager.py  test_provider_matcher.py  test_schedule_service.py
